--- a/dist.ini
+++ b/dist.ini
@@ -20,6 +20,6 @@ Test::Deep = 0
 HTTP::Thin = 0
 HTTP::CookieJar = 0.004
 Ouch = 0.0400
-Wing-Client = 0.04
+Wing::Client = 0.04
 Moo = 1.002000
 Dancer = 1.0
