--- a/dist.ini
+++ b/dist.ini
@@ -4,7 +4,7 @@ license = Perl_5
 copyright_holder = Plain Black Corporation
 copyright_year   = 2013
 
-version = 0.0200
+version = 0.0300
 
 [@Classic]
 
@@ -15,8 +15,6 @@ repository.web    = http://github.com/perlDreamer/Test-Wing-Client
 repository.type   = git
 
 [Prereqs]
-Test::More = 0
-Test::Deep = 0
 HTTP::Thin = 0
 HTTP::CookieJar = 0.004
 Ouch = 0.0400
@@ -24,3 +22,7 @@ Wing::Client = 0.04
 HTTP::Headers = 6.05
 Moo = 1.002000
 Dancer = 1.0
+
+[Prereqs / TestRequires]
+Test::More = 0
+Test::Deep = 0
